# WynnCraftingOptimizer

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
examples/: ingredients.hpp
ingredient-parser/: CMakeLists.txt  ingredient.hpp  ingredients.json  main.cpp  parser.hpp
